# Camera2

./: .gitignore  README.md
android-Camera2VisualProcess/Application/src/main/java/com/example/android/camera2VisualProcess/: ArcSoftImageProcessor.java  Camera2VisualProcessFrame.java
android-Camera2VisualProcess/Camera2Basic/Application/src/main/java/com/example/android/camera2VisualProcess/: Camera2VisualProcessFrame.java
camera2Java/Application/src/main/java/com/example/android/camera2VisualProcess/: ImageUnitsProcess.java
camera2Java/Application/src/main/java/com/example/android/camera2VisualProcess/utils/: ImageUnitsData.java
camera2Java/app/src/main/java/com/example/camera2visualprocess/: Camera2Helper.java
camera2OpenCV/app/src/main/java/com/example/opencvsdk/: MainActivity.java
camera2ndk/: Camera2.md  OpenCV相机应用：代码方案...-20260721205959.txt  README.md  gradle.properties
camera2ndk/Application/: CMakeLists.txt  build.gradle
camera2ndk/Application/src/main/: AndroidManifest.xml
camera2ndk/Application/src/main/cpp/: build-ndk.bat  native-lib.cpp
camera2ndk/Application/src/main/cpp/algorithms/: bokeh.cpp  bokeh.h  clahe.cpp  clahe.h  denoise.cpp  denoise.h  face_detect.cpp  face_detect.h  hdr.cpp  hdr.h  saturation.cpp  saturation.h  sharpen.cpp  sharpen.h
camera2ndk/Application/src/main/cpp/core/: frame.cpp  frame.h  hardware_buffer.cpp  hardware_buffer.h  metadata.h  types.h
camera2ndk/Application/src/main/cpp/encode/: jpeg_encoder.cpp  jpeg_encoder.h
camera2ndk/Application/src/main/cpp/include/camera_engine/: camera_engine.h  camera_engine_android.h  camera_engine_buffer.h  camera_engine_config.h  camera_engine_result.h  camera_engine_types.h  camera_engine_version.h
camera2ndk/Application/src/main/cpp/jni/: jni_bridge.cpp
camera2ndk/Application/src/main/cpp/pipeline/: capture_pipeline.cpp  capture_pipeline.h  pipeline_base.cpp  pipeline_base.h  preview_pipeline.cpp  preview_pipeline.h
camera2ndk/Application/src/main/cpp/src/algorithms/: bokeh.cpp  bokeh.h  clahe.cpp  clahe.h  denoise.cpp  denoise.h  face_detect.cpp  face_detect.h  hdr.cpp  hdr.h  saturation.cpp  saturation.h  sharpen.cpp  sharpen.h
camera2ndk/Application/src/main/cpp/src/api/: camera_engine_android.cpp  camera_engine_api.cpp  camera_engine_context.h
camera2ndk/Application/src/main/cpp/src/bindings/jni/: camera_engine_jni.cpp
camera2ndk/Application/src/main/cpp/src/core/: frame.cpp  frame.h  types.h
camera2ndk/Application/src/main/cpp/src/encode/: jpeg_encoder.cpp  jpeg_encoder.h
camera2ndk/Application/src/main/cpp/src/pipeline/: capture_pipeline.cpp  capture_pipeline.h  pipeline_base.cpp  pipeline_base.h  preview_pipeline.cpp  preview_pipeline.h
camera2ndk/Application/src/main/cpp/src/platform/android/: android_hardware_buffer.cpp
camera2ndk/Application/src/main/java/com/example/android/camera2raw/: Camera2RawFragment.java  CameraActivity.java  CameraController.java  CameraFragment.java  FaceOverlayView.java  ImageProcessor.java  MainActivity.java
camera2ndk/Application/src/main/java/com/opencv/camera/: AutoFitTextureView.java  CameraController.java  CameraEngine.java  CameraFragment.java  CameraMediaStore.java  CameraOverlayView.java  CameraUtils.java  FaceOverlayView.java  FrameMetadata.java  GridOverlayView.java  ImageProcessor.java  MainActivity.java  NativeEngine.java  SettingsFragment.java
camera2ndk/Application/src/main/res/drawable/: bg_ai_top_button.xml  bg_bottom_gradient.xml  bg_flash_options.xml  bg_mode_indicator.xml  bg_recording_dot.xml  bg_shutter_button.xml  bg_shutter_button_pressed.xml  bg_shutter_recording.xml  bg_thumbnail.xml  bg_thumbnail_border.xml  bg_top_gradient.xml  ic_flash_auto.xml  ic_flash_off.xml  ic_gallery_placeholder.xml  ic_grid.xml  ic_hdr_off.xml  ic_hdr_on.xml  ic_switch_camera.xml  ic_timer.xml  selector_shutter.xml
camera2ndk/Application/src/main/res/layout/: activity_camera.xml  fragment_camera.xml  fragment_camera2_basic.xml
camera2ndk/Application/src/main/res/layout-land/: fragment_camera2_basic.xml
camera2ndk/Application/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
camera2ndk/Application/src/main/res/xml/: file_paths.xml
camera2ndk/Application/tests/: AndroidManifest.xml
camera2ndk/Application/tests/src/com/opencv/camera/tests/: SampleTests.java
camera2ndk/gradle/wrapper/: gradle-wrapper.properties
camera2ndk/smoke-test/: preview-aspect-review.md  visual-review-retry.md  visual-review.md
camera2sdk/app/src/main/res/layout/: activity_main.xml
